Fix updates of the model when the resource is overridden during import

Now KisResourceLocator emits all the signals that are needed to override
the resource. Theoretically, we could emit item-moved signal instead of
remove+add pair. It would probably handle selection better. Though I'm
not sure if it will actually work, because the newly added resource **is**
different from the first one. So, technically, we would need to emit
move+change pair. I don't want to try that right now :)

BUG:446725